# name: test_finalize
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'caches': list([
    ]),
    'created_at': datetime.datetime(2021, 1, 11, 18, 24, 33, 149000, tzinfo=datetime.timezone.utc),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'hl5v0i0y',
    'is_legacy': False,
    'isolate': '',
    'labels': list([
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': '20PRT_3_A2_10Mil',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': dict({
      'bases': list([
        list([
          30,
          31,
          31,
          31,
          31,
          31,
        ]),
        list([
          30,
          31,
          31,
          31,
          31,
          32,
        ]),
      ]),
      'composition': list([
        list([
          32,
          14,
          4,
          40,
        ]),
        list([
          22,
          12,
          34,
          25,
        ]),
      ]),
      'count': 998822,
      'encoding': 'Sanger / Illumina 1.8',
      'gc': 43,
      'length': list([
        0,
        52,
      ]),
      'sequences': list([
        0,
        0,
        3512,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ]),
    }),
    'read_paths': None,
    'reads': list([
      dict({
        'download_url': '/samples/hl5v0i0y/reads/reads_1.fq.gz',
        'id': 1129,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'hl5v0i0y',
        'size': 30696061,
        'upload': None,
        'uploaded_at': datetime.datetime(2022, 9, 21, 15, 43, 58, 423000, tzinfo=datetime.timezone.utc),
      }),
    ]),
    'reads_path': None,
    'ready': True,
    'subtractions': list([
      dict({
        'id': '123',
        'name': 'Vitis vinifera + plastids',
      }),
    ]),
    'user': dict({
      'administrator': False,
      'handle': 'james',
      'id': 'abc12345',
    }),
  })
# ---
# name: test_get
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'caches': list([
    ]),
    'created_at': datetime.datetime(2021, 1, 11, 18, 24, 33, 149000, tzinfo=datetime.timezone.utc),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'hl5v0i0y',
    'is_legacy': False,
    'isolate': '',
    'labels': list([
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': '20PRT_3_A2_10Mil',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': dict({
      'bases': list([
        list([
          31,
          32,
          32,
          32,
          32,
          32,
        ]),
        list([
          31,
          32,
          32,
          32,
          32,
          32,
        ]),
        list([
          31,
          32,
          32,
          32,
          32,
          32,
        ]),
        list([
          31,
          32,
          32,
          32,
          32,
          32,
        ]),
        list([
          31,
          32,
          32,
          32,
          32,
          32,
        ]),
      ]),
      'composition': list([
        list([
          37,
          12,
          7,
          41,
        ]),
        list([
          23,
          13,
          35,
          26,
        ]),
        list([
          20,
          17,
          27,
          34,
        ]),
        list([
          23,
          24,
          25,
          26,
        ]),
        list([
          24,
          30,
          25,
          19,
        ]),
      ]),
      'count': 10000000,
      'encoding': 'Sanger / Illumina 1.9',
      'gc': 43,
      'length': list([
        35,
        76,
      ]),
      'sequences': list([
        0,
        0,
        3512,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        1,
        34,
        164,
        640,
        2044,
        5589,
        14429,
        32328,
      ]),
    }),
    'read_paths': None,
    'reads': list([
      dict({
        'download_url': '/samples/hl5v0i0y/reads/reads_1.fq.gz',
        'id': 1129,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'hl5v0i0y',
        'size': 30696061,
        'upload': None,
        'uploaded_at': datetime.datetime(2022, 9, 21, 15, 43, 58, 423000, tzinfo=datetime.timezone.utc),
      }),
    ]),
    'reads_path': None,
    'ready': True,
    'subtractions': list([
      dict({
        'id': '123',
        'name': 'Vitis vinifera + plastids',
      }),
    ]),
    'user': dict({
      'administrator': False,
      'handle': 'james',
      'id': 'abc12345',
    }),
  })
# ---
